# EventOCC

./: .clang-tidy  README.md
evlc_common/: CMakeLists.txt  package.xml
evlc_common/include/evlc_common/: buffer.hpp  camera.hpp  event.hpp  filter.hpp  timer.hpp  types.hpp  utils.hpp
evlc_common/src/: camera.cpp  event.cpp  filter.cpp  types.cpp  utils.cpp
evlc_msgs/: CMakeLists.txt  package.xml
evlc_msgs/msg/: EventArray.msg
evlc_screen/: CMakeLists.txt  package.xml
evlc_screen/include/evlc_screen/: decoder.hpp  detector.hpp  edge_tracker.hpp  marker.hpp  optimizer.hpp  preprocessor.hpp  system.hpp  tracker.hpp  visualizer.hpp
evlc_screen/launch/: run.launch
evlc_screen/param/: default.yaml
evlc_screen/rviz/: default.rviz
evlc_screen/src/: decoder.cpp  detector.cpp  edge_tracker.cpp  marker.cpp  node.cpp  optimizer.cpp  preprocessor.cpp  system.cpp  tracker.cpp  visualizer.cpp
marker_generation/: marker_generator.py
