<?xml version="1.0"?>
<package format="2">
  <name>evlc_msgs</name>
  <version>0.1.0</version>
  <description>messages for evlc</description>
  <maintainer email="suhang@shanghaitech.edu.cn">Hang Su</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>